# aula09_boatcamp-python

./: README.md  etl.py  logging_exemplo_erros.py  pipeline.py  pyproject.toml
decorators/: utils_log.py
decorators/exemplos/: exemplo_hello(print)_decorator.py  exemplo_log_decorator.py  exemplo_time_decorator.py
