[tool.poetry]
name = "aula09-boatcamp"
version = "0.1.0"
description = ""
authors = ["YanZN <yanrobim@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sentry-sdk = "^2.19.2"
pandas = "^2.2.3"
fastparquet = "^2024.11.0"
tenacity = "^9.0.0"
loguru = "^0.7.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
